--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -1,30 +1,129 @@
 @font-face {
   font-style: normal;
-  font-weight: 400;
-  font-family: "Roboto";
+  font-weight: 500;
+  font-family: "Montserrat";
   font-display: swap;
   src:
-    url("../fonts/roboto-regular.woff2") format("woff2"),
-    url("../fonts/roboto-regular.woff") format("woff");
+    url("../fonts/montserrat-medium.woff2") format("woff2"),
+    url("../fonts/montserrat-medium.woff") format("woff");
 }
-
 
 @font-face {
   font-style: normal;
-  font-weight: 500;
-  font-family: "Roboto";
+  font-weight: 600;
+  font-family: "Montserrat";
   font-display: swap;
   src:
-    url("../fonts/roboto-medium.woff2") format("woff2"),
-    url("../fonts/roboto-medium.woff") format("woff");
+    url("../fonts/montserrat-semibold.woff2") format("woff2"),
+    url("../fonts/montserrat-semibold.woff") format("woff");
 }
 
 @font-face {
   font-style: normal;
   font-weight: 700;
-  font-family: "Roboto";
+  font-family: "Montserrat";
   font-display: swap;
   src:
-    url("../fonts/roboto-bold.woff2") format("woff2"),
-    url("../fonts/roboto-bold.woff") format("woff");
+    url("../fonts/montserrat-bold.woff2") format("woff2"),
+    url("../fonts/montserrat-bold.woff") format("woff");
+}
+
+@font-face {
+  font-style: normal;
+  font-weight: 400;
+  font-family: "PF Bague Sans";
+  font-display: swap;
+  src:
+    url("../fonts/pf-bague-sans-pro-regular.woff2") format("woff2"),
+    url("../fonts/pf-bague-sans-pro-regular.woff") format("woff");
+}
+
+@font-face {
+  font-style: normal;
+  font-weight: 700;
+  font-family: "PF Bague Sans";
+  font-display: swap;
+  src:
+    url("../fonts/pf-bague-sans-pro-bold.woff2") format("woff2"),
+    url("../fonts/pf-bague-sans-pro-bold.woff") format("woff");
+}
+
+@font-face {
+  font-style: normal;
+  font-weight: 900;
+  font-family: "PF Bague Sans";
+  font-display: swap;
+  src:
+    url("../fonts/pf-bague-sans-pro-black.woff2") format("woff2"),
+    url("../fonts/pf-bague-sans-pro-black.woff") format("woff");
+}
+
+@font-face {
+  font-style: normal;
+  font-weight: 400;
+  font-family: "SF UI text";
+  font-display: swap;
+  src:
+    url("../fonts/sf-ui-text-regular.woff2") format("woff2"),
+    url("../fonts/sf-ui-text-regular.woff") format("woff");
+}
+
+@font-face {
+  font-style: italic;
+  font-weight: 400;
+  font-family: "SF UI text";
+  font-display: swap;
+  src:
+    url("../fonts/sf-ui-text-regularitalic.woff2") format("woff2"),
+    url("../fonts/sf-ui-text-regularitalic.woff") format("woff");
+}
+
+@font-face {
+  font-style: normal;
+  font-weight: 500;
+  font-family: "SF UI text";
+  font-display: swap;
+  src:
+    url("../fonts/sf-ui-text-medium.woff2") format("woff2"),
+    url("../fonts/sf-ui-text-medium.woff") format("woff");
+}
+
+@font-face {
+  font-style: italic;
+  font-weight: 500;
+  font-family: "SF UI text";
+  font-display: swap;
+  src:
+    url("../fonts/sf-ui-text-mediumitalic.woff2") format("woff2"),
+    url("../fonts/sf-ui-text-mediumitalic.woff") format("woff");
+}
+
+@font-face {
+  font-style: normal;
+  font-weight: 600;
+  font-family: "SF UI text";
+  font-display: swap;
+  src:
+    url("../fonts/sf-ui-text-semibold.woff2") format("woff2"),
+    url("../fonts/sf-ui-text-semibold.woff") format("woff");
+}
+
+@font-face {
+  font-style: normal;
+  font-weight: 700;
+  font-family: "SF UI text";
+  font-display: swap;
+  src:
+    url("../fonts/sf-ui-text-bold.woff2") format("woff2"),
+    url("../fonts/sf-ui-text-bold.woff") format("woff");
+}
+
+@font-face {
+  font-style: normal;
+  font-weight: 900;
+  font-family: "SF UI text";
+  font-display: swap;
+  src:
+    url("../fonts/sf-ui-text-heavy.woff2") format("woff2"),
+    url("../fonts/sf-ui-text-heavy.woff") format("woff");
 }
