--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -9,6 +9,7 @@
 @import "variables";
 @import "mixins";
 @import "global/fonts";
+@import "global/text-default";
 @import "global/utils";
 @import "global/container";
 
