--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -22,7 +22,9 @@ $black-to-right:                    linear-gradient(90deg, rgba(0, 0, 0, 0.75) 0
 // Typography
 //---------------------------------
 
-$font-family:                     "Roboto",  "Arial", sans-serif;
+$font-family-base:                  "SF UI Text", "Arial", sans-serif;
+$font-family-decoration-1:          "PF Bague Sans", "Arial", sans-serif;
+$font-family-decoration-2:          "Montserrat", "Arial", sans-serif;
 
 // Animation
 //---------------------------------
