--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -2,8 +2,14 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
+  right: 0;
   padding-top: 37px;
   padding-bottom: 37px;
   border-bottom: 1px solid #d9dfe8;
+  box-sizing: border-box;
+
+  @include viewport--sm {
+    padding-top: 15px;
+    padding-bottom: 25px;
+  }
 }
