--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -14,9 +14,10 @@ $color-blue:                      #0098c1;
 $color-red:                       #d57c68;
 $color-green:                     #78b17c;
 $color-gray:                      #a7a7a7;
+$color-decoration:                #033a9f;
 
 $color-font-base:                 #485060;
-$color-font-decoration:           #033a9f;
+$color-font-alt:                  #ffffff;
 $color-font-gray:                 #697387;
 
 // Gradient
