--- a/source/sass/blocks/login.scss
+++ b/source/sass/blocks/login.scss
@@ -24,6 +24,14 @@
   @include viewport--md {
     right: 20px;
   }
+
+  @include viewport--sm {
+    max-width: 300px;
+    top: 100px;
+    left: 50%;
+    transform: translate(-50%, 0);
+    right: auto;
+  }
 }
 
 .login__title {
