--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -19,6 +19,7 @@ $color-decoration:                #033a9f;
 $color-font-base:                 #485060;
 $color-font-alt:                  #ffffff;
 $color-font-gray:                 #697387;
+$color-font-gray-2:               #485060;
 
 // Gradient
 
@@ -43,7 +44,7 @@ $modal-transition-settings:         0.6s cubic-bezier(0.55, 0, 0.1, 1);
 $viewport--sm:                      320px;
 $viewport--md:                      768px;
 $viewport--lg:                      1024px;
-$viewport--xl:                      1440px;
+$viewport--xl:                      1200px;
 $viewport--xxl:                     1920px;
 
 // Retina
