--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -2,6 +2,7 @@
 //---------------------------------
 
 @import "vendor/normalize";
+@import "vendor/swiper-bundle";
 
 // Global
 //---------------------------------
@@ -28,3 +29,7 @@
 @import "blocks/main-nav";
 @import "blocks/login";
 @import "blocks/footer";
+@import "blocks/main-page";
+@import "blocks/promo";
+@import "blocks/slide";
+@import "blocks/widget";
