Добавляет блок articles с адаптивом

--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -21,6 +21,7 @@
 @import "components/btn";
 @import "components/modal";
 @import "components/dropdown";
+@import "components/title";
 
 // Blocks
 //---------------------------------
@@ -33,3 +34,5 @@
 @import "blocks/promo";
 @import "blocks/slide";
 @import "blocks/widget";
+@import "blocks/articles";
+@import "blocks/article";
