--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -8,7 +8,7 @@
 .promo__container {
   display: flex;
   padding-top: 225px;
-  padding-bottom: 50px;
+  padding-bottom: 46px;
 
   @include viewport--lg {
     padding-top: 190px;
@@ -18,7 +18,7 @@
 
   @include viewport--sm {
     flex-direction: column;
-    padding-top: 87px;
+    padding-top: 97px;
   }
 }
 
@@ -41,19 +41,19 @@
     margin-bottom: 20px;
   }
 
+  .promo__title-sub {
+    margin-bottom: 10px;
+    font-family: $font-family-secondary-1;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 15px;
+    line-height: 110%;
+    text-transform: uppercase;
+    color: $color-decoration
+  }
+
   .promo__title {
     margin-bottom: 30px;
-    font-family: $font-family-secondary-1;
-    font-weight: 900;
-    font-size: 30px;
-    line-height: 1.2;
-    text-transform: uppercase;
-    color: $color-decoration;
-
-    .promo__title-lower {
-      font-size: 15px;
-      line-height: 1.1;
-    }
 
     @include viewport--sm {
       margin-bottom: 380px;
