--- a/source/sass/components/btn.scss
+++ b/source/sass/components/btn.scss
@@ -4,6 +4,37 @@
   outline: none;
   transition: $default-transition-settings;
 
+  &--light {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 22px;
+    color: $color-decoration;
+
+    span {
+      position: relative;
+      z-index: 1;
+    }
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 11px;
+      left: 0;
+      width: 100%;
+      height: 12px;
+      background-color: #c5ecfd;
+      transition: $default-transition-settings;
+    }
+
+    &:hover,
+    &:focus {
+      &::before {
+        top: 100%;
+        height: 2px;
+      }
+    }
+  }
+
   &--border {
     align-items: center;
     justify-content: center;
