--- a/source/sass/blocks/article.scss
+++ b/source/sass/blocks/article.scss
@@ -1,9 +1,12 @@
 .article {
   position: relative;
+  display: flex;
+  flex-direction: column;
   max-width: 204px;
 
   @include viewport--lg {
     max-width: 270px;
+    max-width: 450px;
   }
 
   @include viewport--sm {
@@ -56,12 +59,19 @@
   }
 
   .article__title {
+    display: block;
     text-overflow: ellipsis;
     word-wrap: break-word;
     font-weight: 600;
     font-size: 14px;
     line-height: 1.3;
     color: $color-font-gray-2;
+    outline: none;
+
+    &:hover,
+    &:focus {
+      text-decoration: underline;
+    }
   }
 
   .article__authors {
@@ -76,6 +86,10 @@
 
 .article--main {
   max-width: 561px;
+
+  @include viewport--lg {
+    max-width: 900px;
+  }
 
   @include viewport--sm {
     max-width: 768px;
