--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -37,3 +37,6 @@
 @import "blocks/articles";
 @import "blocks/article";
 @import "blocks/about";
+@import "blocks/news";
+@import "blocks/partners";
+@import "blocks/send";
