--- a/source/sass/blocks/article.scss
+++ b/source/sass/blocks/article.scss
@@ -136,3 +136,55 @@
     color: $color-decoration;
   }
 }
+
+.article--news {
+  max-width: none;
+
+  .article__image-container {
+    height: 142px;
+    overflow: hidden;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    @include viewport--lg {
+      height: 200px;
+    }
+
+    @include viewport--md {
+      height: 150px;
+    }
+
+    @include viewport--sm {
+      height: 130px;
+    }
+
+    @media (max-width: 400px) {
+      height: 83px;
+    }
+
+    @media (max-width: 374px) {
+      height: auto;
+    }
+  }
+
+  .article__date-container {
+    top: 8px;
+    left: 8px;
+  }
+
+  .article__title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 22px;
+
+    @include viewport--sm {
+      word-wrap: break-word;
+      font-size: 14px;
+      line-height: 19px;
+    }
+  }
+}
