--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -22,6 +22,7 @@
 @import "components/modal";
 @import "components/dropdown";
 @import "components/title";
+@import "components/accordion";
 
 // Blocks
 //---------------------------------
@@ -40,3 +41,5 @@
 @import "blocks/news";
 @import "blocks/partners";
 @import "blocks/send";
+@import "blocks/archive-page";
+@import "blocks/archive";
