Добавляет страницу журнала с адаптивом

--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -23,6 +23,7 @@
 @import "components/dropdown";
 @import "components/title";
 @import "components/accordion";
+@import "components/breadcrumbs";
 
 // Blocks
 //---------------------------------
@@ -43,3 +44,5 @@
 @import "blocks/send";
 @import "blocks/archive-page";
 @import "blocks/archive";
+@import "blocks/magazine-page";
+@import "blocks/file";
