Добавляет страницу Авторам с адаптивом

--- a/source/sass/blocks/archive.scss
+++ b/source/sass/blocks/archive.scss
@@ -75,8 +75,7 @@
     box-shadow: 5px 5px 5px #9b9997;
 
     .archive__text {
-      color: $color-font-alt;
-      background-color: $color-decoration;
+      color: $color-decoration;
     }
   }
 }
