--- a/source/sass/components/btn.scss
+++ b/source/sass/components/btn.scss
@@ -4,6 +4,24 @@
   outline: none;
   transition: $default-transition-settings;
 
+  &--blue {
+    padding: 9px 16px;
+    background-color: $color-decoration;
+    box-shadow: 0px 2px 3px rgba(6, 177, 231, 0.4);
+    border-radius: 3px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 18px;
+    color: $color-font-alt;
+
+    &:hover,
+    &:focus {
+      color: $color-decoration;
+      background-color: $color-default-white;
+      box-shadow: 1px 1px 7px 2px rgba(6, 177, 231, 0.4);
+    }
+  }
+
   &--light {
     font-weight: 500;
     font-size: 16px;
