Добавляет страницу Редакционная коллегия

--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -48,3 +48,5 @@
 @import "blocks/file";
 @import "blocks/authors";
 @import "blocks/article-page";
+@import "blocks/editors";
+@import "blocks/editor";
