Добавляет страницу Редакционная политика с адаптивом

--- a/source/sass/blocks/editors.scss
+++ b/source/sass/blocks/editors.scss
@@ -1,5 +1,8 @@
 .editors {
   position: relative;
+  background: url("../img/bg/bg-lines.png") no-repeat;
+  background-position: top;
+  background-size: 100% 764px;
 }
 
 .editors__container {
