Добавляет страницу Новости с адаптивом

--- a/source/sass/blocks/archive-page.scss
+++ b/source/sass/blocks/archive-page.scss
@@ -1,4 +1,5 @@
 .archive-page {
+  position: relative;
   background: url("../img/bg/bg-lines.png") no-repeat;
   background-position: top;
   background-size: 100% 814px;
