--- a/source/sass/blocks/article.scss
+++ b/source/sass/blocks/article.scss
@@ -5,7 +5,6 @@
   max-width: 204px;
 
   @include viewport--lg {
-    max-width: 270px;
     max-width: 450px;
   }
 
@@ -191,6 +190,14 @@
       word-wrap: break-word;
       font-size: 14px;
       line-height: 19px;
+    }
+  }
+}
+
+.article--big {
+  .article__image-container {
+    @include viewport--sm {
+      height: auto;
     }
   }
 }
