Добавляет 1 вариант страницы журнала

--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -8,7 +8,7 @@
 .promo__container {
   display: flex;
   padding-top: 225px;
-  padding-bottom: 46px;
+  padding-bottom: 76px;
 
   @include viewport--lg {
     padding-top: 190px;
@@ -121,6 +121,8 @@
 }
 
 .promo__slider-btn-group {
+  position: absolute;
+  bottom: -30px;
   display: flex;
   align-items: center;
   justify-content: space-between;
