--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -3,6 +3,7 @@
   background: url("../img/bg/bg-lines.png") no-repeat;
   background-position: center;
   background-size: cover;
+  overflow-x: hidden;
 }
 
 .promo__container {
