--- a/source/sass/global/utils.scss
+++ b/source/sass/global/utils.scss
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 .visually-hidden {
   position: absolute;
 
@@ -14,7 +18,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  overflow-x: hidden;
+  // overflow-x: hidden;
 
   .header,
   .footer {
