--- a/source/sass/blocks/widget.scss
+++ b/source/sass/blocks/widget.scss
@@ -1,13 +1,12 @@
 .widget {
-  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
   max-width: 200px;
 
-  @include viewport--sm {
-    max-width: none;
+  @include viewport--md {
+    display: none;
   }
 }
 
@@ -92,6 +91,9 @@
 }
 
 .widget__btn {
+  padding-left: 4px;
+  padding-right: 4px;
+
   @include viewport--sm {
     margin-top: 5px;
     align-self: flex-start;
