--- a/source/sass/blocks/file.scss
+++ b/source/sass/blocks/file.scss
@@ -11,7 +11,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  border: 1px solid #cdeffa;
+  border: 1px solid #e6e6e6;
   box-sizing: border-box;
   border-radius: 5px;
   margin-bottom: 10px;
