--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -75,7 +75,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: auto;
-  column-gap: 15%;
+  column-gap: 10%;
   row-gap: 17px;
 
   @include viewport--sm {
@@ -153,7 +153,6 @@
 }
 
 .footer__search-btn {
-  margin-bottom: 23px;
   outline: none;
   transition: $default-transition-settings;
 
@@ -166,35 +165,21 @@
     opacity: 0.5;
   }
 
-  @include viewport--sm {
-    margin-bottom: 0;
-    margin-right: 30px;
-  }
-
   @include viewport--xs {
-    margin-right: 144px;
+    margin-right: 104px;
   }
 }
 
 .footer__change-lang {
   display: flex;
-  flex-direction: column;
   align-items: center;
-
-  @include viewport--sm {
-    flex-direction: row;
-  }
 }
 
 .footer__input-box {
-  margin-bottom: 14px;
+  margin-right: 8px;
 
   &:last-of-type {
-    margin-bottom: 0;
-  }
-
-  @include viewport--sm {
-    margin-bottom: 0;
+    margin-right: 0;
   }
 }
 
@@ -206,7 +191,6 @@
   background-color: transparent;
   color: $color-decoration;
   text-decoration: underline;
-  border-radius: 3px;
   cursor: pointer;
   transition: $default-transition-settings;
 }
@@ -220,4 +204,45 @@
 .footer__radio-input:focus ~ .footer__radio-label,
 .footer__radio-label:hover {
   box-shadow: 0 0 1px 1px $color-decoration;
+}
+
+.footer__inputs-line {
+  display: flex;
+  align-items: center;
+  margin-bottom: 23px;
+
+  @include viewport--sm {
+    margin-bottom: 0;
+    margin-right: 15px;
+  }
+}
+
+.footer__social {
+  margin-left: 25px;
+
+  @include viewport--sm {
+    margin-left: 20px;
+  }
+}
+
+.footer__social-link {
+  display: block;
+  margin-top: -5px;
+  outline: none;
+  transition: $default-transition-settings;
+
+  svg {
+    vertical-align: middle;
+    fill: $color-font-gray;
+    opacity: 0.8;
+    transition: $default-transition-settings;
+  }
+
+  &:hover,
+  &:focus {
+    svg {
+      fill: $color-decoration;
+      opacity: 1;
+    }
+  }
 }
