--- a/source/sass/components/btn.scss
+++ b/source/sass/components/btn.scss
@@ -7,7 +7,6 @@
   &--blue {
     padding: 9px 16px;
     background-color: $color-decoration;
-    box-shadow: 0px 2px 3px rgba(6, 177, 231, 0.4);
     border-radius: 3px;
     font-weight: 500;
     font-size: 14px;
@@ -18,7 +17,7 @@
     &:focus {
       color: $color-decoration;
       background-color: $color-default-white;
-      box-shadow: 1px 1px 7px 2px rgba(6, 177, 231, 0.4);
+      box-shadow: 0 0 4px 1px #304df566
     }
   }
 
@@ -31,25 +30,6 @@
     span {
       position: relative;
       z-index: 1;
-    }
-
-    &::before {
-      content: "";
-      position: absolute;
-      top: 11px;
-      left: 0;
-      width: 100%;
-      height: 12px;
-      background-color: #c5ecfd;
-      transition: $default-transition-settings;
-    }
-
-    &:hover,
-    &:focus {
-      &::before {
-        top: 100%;
-        height: 2px;
-      }
     }
   }
 
