--- a/source/sass/global/utils.scss
+++ b/source/sass/global/utils.scss
@@ -57,3 +57,16 @@ html {
 .color-decoration {
   color: $color-decoration;
 }
+
+.mt40 {
+  margin-top: 40px;
+}
+
+input {
+  border:none;
+  background-image:none;
+  background-color:transparent;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+}
